deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-words
  labels:
    app: reverse-words
spec:
  template:
    spec:
      containers:
      - name: reverse-words
        image: quay.io/jaeichle/tekton-reversewords:9c095287104df5ae30802b42ef5e335009642f44
