route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: stage
  namespace: reverse-words-stage
  labels:
    app: reverse-words
    app.kubernetes.io/instance: reverse-words-stage
spec:
  to:
    kind: Service
    name: reverse-words
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
